--- a/lang/backup_scheduler-es_ES.po
+++ b/lang/backup_scheduler-es_ES.po
@@ -4,9 +4,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2011-12-14T16:01:52+00:00\n"
+"PO-Revision-Date: 2012-02-19T18:06:47+00:00\n"
 "Last-Translator: Javier <>\n"
 "Last-Translator: AVfoto <alvaro@alvarovillafoto.es>\n"
+"Last-Translator: charliechin <http://www.twitter.com/charliechin>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,7 +29,7 @@ msgid "Sorry, but you should install/activate %s on your website. Otherwise, thi
 msgstr "Lo siento, pero debes de instalar/activar %s en tu website. De otra manera el plugin no funcionará correctamente !"
 
 msgid "Here is the backup files. You can force a new backup or download previous backup files."
-msgstr "Aquí están los archivos de la copia de seguridad. Puedes forzar a hacer un nuevo backup o descargar los anteriores."
+msgstr "Aquí están los archivos de la copia de seguridad. Puedes forzar a hacer una nueva copia de seguridad o descargar los anteriores."
 
 msgid "An automatic backup will be launched in %s days."
 msgstr "Una copia automática será realizada en %s dias."
@@ -52,7 +53,7 @@ msgid "Keep the backup files for (in days):"
 msgstr "Guardar los archivos de copia por (en dias):"
 
 msgid "What do you want to save?"
-msgstr "Que quieres guardad?"
+msgstr "¿Que quiere guardar?"
 
 msgid "The plugins directory:"
 msgstr "El directorio de plugins:"
@@ -70,7 +71,7 @@ msgid "The SQL database:"
 msgstr "La base de datos SQL:"
 
 msgid "Do you want that the backup is sent by email?"
-msgstr "Quieres que la copia de seguridad te sea enviada por e-mail?"
+msgstr "¿Quiere que la copia de seguridad le sea enviada por e-mail?"
 
 msgid "If so, please enter your email:"
 msgstr "Si es así, introduce tu e-mail:"
@@ -146,4 +147,187 @@ msgstr "Saludos cordiales,"
 
 msgid "Backup of %s (%s)"
 msgstr "Copia de seguridad de %s (%s)"
+
+msgid "Please note that 0 means midnight, 1 means 1am, 13 means 1pm, etc. The backup will occur at that time (server time) so make sure that your website is not too overloaded at that time."
+msgstr "Tenga en cuenta que 0 significa medianoche, 1 significa 1am, 13 significa 13:00, etc... La copia de seguridad se producirá en ese momento (hora del servidor) Asegurese de que su sitio web no está demasiado sobrecargada en ese momento."
+
+msgid "Please also note that the backup won't be end exactly at that time. The backup process could take up to 6h especially if you do not have a lot of traffic on your website and/or if the backup is quite huge."
+msgstr "Por favor, tenga en cuenta que su copia de seguridad no finalizará exactamente a esa hora. El proceso de respaldo puede tardar hasta 6h ante todo si no dispone de mucho tráfico en su sitio web y/o la copia de seguridad es bastante grande."
+
+msgid "All directories (the full Wordpress installation):"
+msgstr "Todos los directorios (La instalación completa de Wordpress)"
+
+msgid "Check this option if you want to save everything. Be careful, because the backup could be quite huge!"
+msgstr "Marca esta opción si deseas guardar todo. Tenga cuidado, ya que su copia de seguridad puede ser muy pesado"
+
+msgid "Check this option if you want to save all plugins that you have installed and that you use on this website."
+msgstr "Marca esta opción si desea guardar todos los plugins que ha instalado y que usa en  este sitio web."
+
+msgid "Check this option if you want to save all themes that you have installed and that you use on this website."
+msgstr "Marca esta opción si desea guardar todos sus temas (themes) que tiene instalado y que usa en este sitio web."
+
+msgid "Check this option if you want to save the images, the files, etc. that you have uploaded on your website to create your articles/posts/pages."
+msgstr "Marca esta opción si desea guardar las imágenes, archivos, etc... que se han subido a su sitio web  para crear articulos/posts/páginas."
+
+msgid "Check this option if you want to save the text of your posts, your configurations, etc."
+msgstr "Marca esta opción si desea guardar el texto de sus posts, su configuración, etc..."
+
+msgid "The maximum file size (in MB):"
+msgstr "Tamaño máximo de archivo (en MB):"
+
+msgid "Please note that the zip file will be split into multiple files to comply with the maximum file size you have indicated"
+msgstr "Por favor, tenga en cuenta que el archivo .zip será partido en multiples archivos para coincidir con el tamaño máximo de archivo que ha especificado."
+
+msgid "Send the backup files by email:"
+msgstr "Enviar copia de seguridad mediante email:"
+
+msgid "Do you want to add a suffix to sent files:"
+msgstr "Desea añadir un sufijo para enviar los archivos:"
+
+msgid "You do not need to fill this field if no mail is to be sent."
+msgstr "No necesita rellenar este campo si no se va a enviar ningún correo"
+
+msgid "Do you want that the backup is stored on a FTP?"
+msgstr "¿Desea que su copia de seguridad se almacene en un  FTP?"
+
+msgid "Save the backup files on a FTP?"
+msgstr "¿Guardar los archivos de la copia de seguridad en un FTP?"
+
+msgid "FTP host:"
+msgstr "Host FTP:"
+
+msgid "Your FTP login:"
+msgstr "Su login FTP:"
+
+msgid "Your FTP pass:"
+msgstr "Su contraseña FTP:"
+
+msgid "If you want to be notify when the FTP storage is finished, please enter your email:"
+msgstr "Si desea que se le notifique cuando el almacenamiento FTP finalice, por favor, introduzca su email:"
+
+msgid "Your PHP installation does not support FTP features, thus this option has been disabled! Sorry..."
+msgstr "Su instalación PHP no soporta características FTP, asi que esta opción se ha desactivado! Lo sentimos..."
+
+msgid "Advanced - Memory and time management"
+msgstr "Avanzado - Gestión de memoria y tiempo"
+
+msgid "What is the maximum size of allocated memory (in MB):"
+msgstr "¿Cuál es el tamaño máximo de memoria asignada (en MB):"
+
+msgid "On some Wordpress installation, you may have memory issues. Thus, try to reduce this number if you face such error."
+msgstr "En algunas instalaciones de Wordpress, puede tener problemas de memoria. Por lo tanto, intente reducir este número si se enfrentan a tal error."
+
+msgid "For your information, the memory limit of your webserver is %s whereas the present memory usage is %s."
+msgstr "Para su información, el límite de memoria de su servidor web es %s mientras que el uso de la memoria actual es %s."
+
+msgid "It is recommended that the maximum attachment size is not set to a value higher than this one."
+msgstr "Se recomienda que el tamaño máximo de archivos adjuntos no supere este valor"
+
+msgid "What is the maximum time for the php scripts execution (in seconds):"
+msgstr "¿Cuál es el tiempo máximo para la ejecución de scripts php? (en segundos):"
+
+msgid "Even if you do not have time restriction, it is recommended to set this value to 15sec in order to avoid any killing of the php scripts by your web hoster."
+msgstr "Incluso si no tiene restricción de tiempo, se recomienda establecer este valor a 15 segundos con el fin de evitar cualquier muerte (kill) de los scripts PHP por su proveedor de alojamiento web."
+
+msgid "An automatic backup will be launched in %s days and %s hours."
+msgstr "Una copia de seguridad se pondrá en marcha en %s dias y %s horas."
+
+msgid "The backup process has started %s hours ago but has not finished yet."
+msgstr "El proceso de copia de seguridad ha empezado hace %s horas pero aun no ha acabado."
+
+msgid "Force a new backup (with Mail/FTP)"
+msgstr "Forzar una nueva copia de seguridad (con FTP/email)"
+
+msgid "Force a new backup (without any external storage or sending)"
+msgstr "Forzar una nueva copia de seguridad (sin ningún tipo de almacenamiento externo o envío)"
+
+msgid "Backup finished on %s at %s"
+msgstr "Copia de seguridad finalizada en %s al %s"
+
+msgid "Delete these backup files"
+msgstr "Eliminar estos archivos de la copia de seguridad"
+
+msgid "The process is still in progress for this backup (begun %s at %s)."
+msgstr "El proceso aún está en curso de esta copia de seguridad ( Empezado %s en %s)."
+
+msgid "The SQL extraction is in progress (%s tables extracted)."
+msgstr "La estracción SQL está en progreso (%s tablas extraidas)."
+
+msgid "The ZIP creation is in progress (%s files has been added in the zip file and the current size of the zip is %s)."
+msgstr "La creación ZIP está en curso (%s archivos se han añadido en el archivo zip y el tamaño actual del zip es %s)."
+
+msgid "The FTP sending is in progress (%s files has been stored in the FTP)."
+msgstr "El envío mediante FTP está en curso (%s archivos se ha almacenado en el servidor FTP)."
+
+msgid "The MAIL sending is in progress (%s files has been sent)."
+msgstr "El envío mediante MAIL está en curso (%s archivos se han enviado)"
+
+msgid "Cancel this process"
+msgstr "Cancelar este proceso"
+
+msgid "Please wait..."
+msgstr "Espere por favor..."
+
+msgid "Please wait, a backup is in progress! If you want to force a new backup, refresh this page and end the current backup first."
+msgstr "Por favor espere, ¡Se está realizando una copia de seguridad! Si desea forzar una nueva copia de seguirad, refresque esta página y finalice la copia de seguridad actual primero."
+
+msgid "An other SQL extraction is still in progress (for %s seconds)... Please wait!"
+msgstr "Otra extracción de SQL todavía está en marcha (por segundo %s) ... ¡Por favor, espere!"
+
+msgid "(SQL extraction)"
+msgstr "(extracción SQL)"
+
+msgid "An other backup is still in progress (for %s seconds)... Please wait!"
+msgstr "Otra copia de seguridad está en curso (lleva %s segundos)... ¡Aguarde por favor!"
+
+msgid "(ZIP creation)"
+msgstr "(Creación del archivo ZIP)"
+
+msgid "(FTP sending)"
+msgstr "(Enviando FTP)"
+
+msgid "Backup of %s on %s (%s)"
+msgstr "Copia de seguridad de %s en %s (%s)"
+
+msgid "(MAIL sending)"
+msgstr "(enviando CORREO)"
+
+msgid "Your Wordpress installation cannot send emails (with heavy attachments)!"
+msgstr "¡Su instalación de Wordpress no puede enviar correos electrónicos (con archivos adjuntos pesados)!"
+
+msgid "The file %s cannot be deleted. You should have a problem with file permissions or security restrictions."
+msgstr "El archivo %s no puede ser eliminado. Debe haber un problema con los permisos o restricciones de seguridad."
+
+msgid "An unknown error occured!"
+msgstr "¡Oops! ¡Ha ocurrido un error desconocido!"
+
+msgid "The process has been canceled by a third person"
+msgstr "El proceso ha sido cancelado por una tercera persona"
+
+msgid "A new backup has been generated!"
+msgstr "¡Una nueva copia de seguridad ha sido generada!"
+
+msgid "%s backup files has been successfully saved on your FTP (%s)"
+msgstr "%s archivos de su copia de seguridad han sido correctamente guardados en su FTP(%s)"
+
+msgid "Backup of %s on %s - FTP confirmation"
+msgstr "Copia de seguridad de %s en %s - Confirmación FTP"
+
+msgid "No host has been defined"
+msgstr "No se ha definido ningún host"
+
+msgid "Your PHP installation does not support SSL features... Thus, please use a standard FTP and not a FTPS!"
+msgstr "Su instalación PHP no soporta características SSL. Asi que, por favor, ¡use un FTP estandar y no uno FTPS!"
+
+msgid "The host %s cannot be resolved!"
+msgstr "¡El host %s no puede ser resuelto!"
+
+msgid "The file %s cannot be transfered to the FTP repository! The ftp_put function returns: %s"
+msgstr "¡El archivo %s no puede ser transferido al FTP especificado! La función ftp_put devuelve: %s"
+
+msgid "The specified folder %s does not exists. Please create it so that the transfer may start!"
+msgstr "La carpeta específica %s no existe. ¡Por favor cree la carpeta para que la transferencia empiece!"
+
+msgid "The login/password does not seems valid!"
+msgstr "Login/contraseña  incorrectos"
 
